unpackaged/main/default/objects/Order/fields/AcompteCB__c.field-meta.xml
<CustomField>
    <fullName>AcompteCB__c</fullName>
    <label>AcompteCB</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>