unpackaged/main/default/objects/Order/fields/Activity_Retake__c.field-meta.xml
<CustomField>
    <fullName>Activity_Retake__c</fullName>
    <formula>SBQQ__Quote__r.Activity_Retake__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity Retake</label>
    <type>Text</type>
</CustomField>