unpackaged/main/default/objects/Order/fields/AdminSAASContactEmail__c.field-meta.xml
<CustomField>
    <fullName>AdminSAASContactEmail__c</fullName>
    <description>Admin SAAS contact email, editable in DocuSign</description>
    <label>Admin SAAS Contact Email</label>
    <type>Email</type>
</CustomField>