unpackaged/main/default/objects/Order/fields/AdminSAASContactFirstName__c.field-meta.xml
<CustomField>
    <fullName>AdminSAASContactFirstName__c</fullName>
    <description>Admin SAAS contact firstname, editable in DocuSign</description>
    <label>Admin SAAS Contact First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>