unpackaged/main/default/objects/Order/fields/AdminSAASContactLastName__c.field-meta.xml
<CustomField>
    <fullName>AdminSAASContactLastName__c</fullName>
    <description>Admin SAAS contact last name, editable in DocuSign</description>
    <label>Admin SAAS Contact Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>