unpackaged/main/default/objects/Order/fields/AdminSAASContactMobilePhone__c.field-meta.xml
<CustomField>
    <fullName>AdminSAASContactMobilePhone__c</fullName>
    <description>Admin SAAS contact mobile phone, editable in DocuSign</description>
    <label>Admin SAAS Contact Mobile Phone</label>
    <type>Phone</type>
</CustomField>