unpackaged/main/default/objects/Order/fields/AdminSAASContactPhone__c.field-meta.xml
<CustomField>
    <fullName>AdminSAASContactPhone__c</fullName>
    <description>Admin SAAS contact phone, editable in DocuSign</description>
    <label>Admin SAAS Contact Phone</label>
    <type>Phone</type>
</CustomField>