unpackaged/main/default/objects/Order/fields/AdminSAASContactSalutation__c.field-meta.xml
<CustomField>
    <fullName>AdminSAASContactSalutation__c</fullName>
    <label>Admin SAAS Contact Salutation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Salutation</valueSetName>
    </valueSet>
</CustomField>