unpackaged/main/default/objects/Order/fields/Amend_Number__c.field-meta.xml
<CustomField>
    <fullName>Amend_Number__c</fullName>
    <description>W-001931 modifier le libellé du champ</description>
    <label>Zuora Amend Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>