unpackaged/main/default/objects/Order/fields/Application_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Application_Conditions__c</fullName>
    <formula>SBQQ__Quote__r.Application_Conditions__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Conditions</label>
    <type>Text</type>
</CustomField>