unpackaged/main/default/objects/Order/fields/Approval_Comment__c.field-meta.xml
<CustomField>
    <fullName>Approval_Comment__c</fullName>
    <formula>SBQQ__Quote__r.Approval_Comment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Comment</label>
    <type>Text</type>
</CustomField>