unpackaged/main/default/objects/Order/fields/Average_Percentage_Discount__c.field-meta.xml
<CustomField>
    <fullName>Average_Percentage_Discount__c</fullName>
    <formula>SBQQ__Quote__r.Average_Percentage_Discount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Percentage Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>