unpackaged/main/default/objects/Order/fields/B2BOrder__c.field-meta.xml
<CustomField>
    <fullName>B2BOrder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to differentiate between an Order created from the Store VS one created from CPQ.
US W-001599 - BtoB_US28_mail de confirmation de commande</description>
    <inlineHelpText>Set to TRUE if the Order is created from the Store.</inlineHelpText>
    <label>B2B Order</label>
    <type>Checkbox</type>
</CustomField>