unpackaged/main/default/objects/Order/fields/Bank_City__c.field-meta.xml
<CustomField>
    <fullName>Bank_City__c</fullName>
    <label>Bank City</label>
    <length>30</length>
    <type>Text</type>
</CustomField>