unpackaged/main/default/objects/Order/fields/BIC__c.field-meta.xml
<CustomField>
    <fullName>BIC__c</fullName>
    <label>BIC</label>
    <length>11</length>
    <maskChar>asterisk</maskChar>
    <maskType>lastFour</maskType>
    <type>EncryptedText</type>
</CustomField>