unpackaged/main/default/objects/Order/fields/Billing_Account_ERP_Number__c.field-meta.xml
<CustomField>
    <fullName>Billing_Account_ERP_Number__c</fullName>
    <formula>IF( B2BOrder__c , Account.ERP_Number__c ,SBQQ__Quote__r.Billing_Account_ERP_Number__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Account ERP Number</label>
    <type>Text</type>
</CustomField>