unpackaged/main/default/objects/Order/fields/Billing_City__c.field-meta.xml
<CustomField>
    <fullName>Billing_City__c</fullName>
    <formula>IF( B2BOrder__c , Account.BillingCity ,SBQQ__Quote__r.SBQQ__BillingCity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing City</label>
    <type>Text</type>
</CustomField>