unpackaged/main/default/objects/Order/fields/Billing_Country__c.field-meta.xml
<CustomField>
    <fullName>Billing_Country__c</fullName>
    <formula>IF( B2BOrder__c , Account.BillingCountry ,SBQQ__Quote__r.SBQQ__BillingCountry__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Country</label>
    <type>Text</type>
</CustomField>