unpackaged/main/default/objects/Order/fields/Billing_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Billing_Frequency__c</fullName>
    <formula>TEXT( SBQQ__Quote__r.Billing_Frequency__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Frequency</label>
    <type>Text</type>
</CustomField>