unpackaged/main/default/objects/Order/fields/Billing_Name__c.field-meta.xml
<CustomField>
    <fullName>Billing_Name__c</fullName>
    <formula>IF( B2BOrder__c , TECH_AccountName__c ,SBQQ__Quote__r.SBQQ__BillingName__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Name</label>
    <type>Text</type>
</CustomField>