unpackaged/main/default/objects/Order/fields/Billing_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Billing_Postal_Code__c</fullName>
    <formula>IF( B2BOrder__c , Account.BillingPostalCode ,SBQQ__Quote__r.SBQQ__BillingPostalCode__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Postal Code</label>
    <type>Text</type>
</CustomField>