unpackaged/main/default/objects/Order/fields/Billing_Street__c.field-meta.xml
<CustomField>
    <fullName>Billing_Street__c</fullName>
    <formula>IF( B2BOrder__c , Account.BillingStreet ,SBQQ__Quote__r.SBQQ__BillingStreet__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Street</label>
    <type>Text</type>
</CustomField>