unpackaged/main/default/objects/Order/fields/BillingContactEmail__c.field-meta.xml
<CustomField>
    <fullName>BillingContactEmail__c</fullName>
    <label>Billing Contact Email</label>
    <type>Email</type>
</CustomField>