unpackaged/main/default/objects/Order/fields/BillingContactFirstName__c.field-meta.xml
<CustomField>
    <fullName>BillingContactFirstName__c</fullName>
    <description>Billing contact firstname, editable in DocuSign</description>
    <label>Billing Contact First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>