unpackaged/main/default/objects/Order/fields/BillingContactLastName__c.field-meta.xml
<CustomField>
    <fullName>BillingContactLastName__c</fullName>
    <description>Billing contact last name, editable in DocuSign</description>
    <label>Billing Contact Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>