unpackaged/main/default/objects/Order/fields/BillingContactMobilePhone__c.field-meta.xml
<CustomField>
    <fullName>BillingContactMobilePhone__c</fullName>
    <description>Billing contact mobile phone, editable in DocuSign</description>
    <label>Billing Contact Mobile Phone</label>
    <type>Phone</type>
</CustomField>