unpackaged/main/default/objects/Order/fields/BillingContactPhone__c.field-meta.xml
<CustomField>
    <fullName>BillingContactPhone__c</fullName>
    <description>Billing contact phone, editable in DocuSign</description>
    <label>Billing Contact Phone</label>
    <type>Phone</type>
</CustomField>