unpackaged/main/default/objects/Order/fields/BillingContactSalutation__c.field-meta.xml
<CustomField>
    <fullName>BillingContactSalutation__c</fullName>
    <label>Billing Contact Salutation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Salutation</valueSetName>
    </valueSet>
</CustomField>