unpackaged/main/default/objects/Order/fields/BillingPlan__c.field-meta.xml
<CustomField>
    <fullName>BillingPlan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Plan</label>
    <referenceTo>BillingPlan__c</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>