unpackaged/main/default/objects/Order/fields/Cart__c.field-meta.xml
<CustomField>
    <fullName>Cart__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>VMO 20211007: Created LOOKUP on Cart to get CartItem Information in apex to create the Training Session records using the fields Session Date and Session Code that are saved on the CartItem when user adds a Product to his Cart.</description>
    <label>Cart</label>
    <referenceTo>WebCart</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>