unpackaged/main/default/objects/Order/fields/Co_contractor_Name__c.field-meta.xml
<CustomField>
    <fullName>Co_contractor_Name__c</fullName>
    <label>Co-contractor Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>