unpackaged/main/default/objects/Order/fields/Co_contractor_Signature_Date__c.field-meta.xml
<CustomField>
    <fullName>Co_contractor_Signature_Date__c</fullName>
    <label>Co-contractor Signature Date</label>
    <type>Date</type>
</CustomField>