unpackaged/main/default/objects/Order/fields/Collection_Status__c.field-meta.xml
<CustomField>
    <fullName>Collection_Status__c</fullName>
    <formula>SBQQ__Quote__r.Collection_Status_Disp__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Collection Status</label>
    <type>Text</type>
</CustomField>