unpackaged/main/default/objects/Order/fields/Continue_Order_Creation__c.field-meta.xml
<CustomField>
    <fullName>Continue_Order_Creation__c</fullName>
    <label>Continue Order Creation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Step1</fullName>
            </value>
            <value>
                <fullName>Step2</fullName>
            </value>
            <value>
                <fullName>Step3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>