unpackaged/main/default/objects/Order/fields/ContractId_from_Zuora__c.field-meta.xml
<CustomField>
    <fullName>ContractId_from_Zuora__c</fullName>
    <label>ContractId from Zuora</label>
    <length>40</length>
    <type>Text</type>
</CustomField>