unpackaged/main/default/objects/Order/fields/Daily_Fee__c.field-meta.xml
<CustomField>
    <fullName>Daily_Fee__c</fullName>
    <label>Daily Fee</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>