unpackaged/main/default/objects/Order/fields/Decomissioning_duration__c.field-meta.xml
<CustomField>
    <fullName>Decomissioning_duration__c</fullName>
    <formula>SBQQ__Quote__r.Decomissioning_duration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Decomissioning duration (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>