unpackaged/main/default/objects/Order/fields/Delay_for_Service_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Delay_for_Service_Start_Date__c</fullName>
    <formula>SBQQ__Quote__r.Delay_for_Service_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delay for Service Start Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>