unpackaged/main/default/objects/Order/fields/Delivery_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Contact_Email__c</fullName>
    <description>W-001933 Renommer le libellé du  champ à Service Delivery Contact Email</description>
    <label>Service Delivery Contact Email</label>
    <type>Email</type>
</CustomField>