unpackaged/main/default/objects/Order/fields/Delivery_Contact_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Contact_First_Name__c</fullName>
    <description>W-001933 Renommer le libellé du  champ à Service Delivery Contact First Name</description>
    <label>Service Delivery Contact First Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>