unpackaged/main/default/objects/Order/fields/Delivery_Contact_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Contact_Last_Name__c</fullName>
    <description>W-001933 Renommer le libellé du  champ à Service Delivery Contact Last Name</description>
    <label>Service Delivery Contact Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>