unpackaged/main/default/objects/Order/fields/Delivery_Contact_Mobile_Phone__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Contact_Mobile_Phone__c</fullName>
    <description>W-001933 Renommer le libellé du champ à Service Delivery Contact Mobile Phone</description>
    <label>Service Delivery Contact Mobile Phone</label>
    <type>Phone</type>
</CustomField>