unpackaged/main/default/objects/Order/fields/Delivery_Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Contact_Phone__c</fullName>
    <description>W-001933 Renommer le libellé du  champ à Service Delivery Contact Phone</description>
    <label>Service Delivery Contact Phone</label>
    <type>Phone</type>
</CustomField>