unpackaged/main/default/objects/Order/fields/Delivery_Contact_Salutation__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Contact_Salutation__c</fullName>
    <label>Service Delivery Contact Salutation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Salutation</valueSetName>
    </valueSet>
</CustomField>