unpackaged/main/default/objects/Order/fields/Eased_MRR__c.field-meta.xml
<CustomField>
    <fullName>Eased_MRR__c</fullName>
    <formula>SBQQ__Quote__r.Eased_MRR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eased MRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>