unpackaged/main/default/objects/Order/fields/Extension_Mode__c.field-meta.xml
<CustomField>
    <fullName>Extension_Mode__c</fullName>
    <formula>TEXT(SBQQ__Quote__r.Extension_Mode__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Extension Mode</label>
    <type>Text</type>
</CustomField>