unpackaged/main/default/objects/Order/fields/Folder__c.field-meta.xml
<CustomField>
    <fullName>Folder__c</fullName>
    <formula>SBQQ__Quote__r.Folder_Entity__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Folder</label>
    <type>Text</type>
</CustomField>