unpackaged/main/default/objects/Order/fields/Free_Months__c.field-meta.xml
<CustomField>
    <fullName>Free_Months__c</fullName>
    <formula>SBQQ__Quote__r.Free_Months__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Free Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>