unpackaged/main/default/objects/Order/fields/FullService__c.field-meta.xml
<CustomField>
    <fullName>FullService__c</fullName>
    <formula>SBQQ__Quote__r.Full_Service__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FullService</label>
    <type>Checkbox</type>
</CustomField>