unpackaged/main/default/objects/Order/fields/GenerationProfile__c.field-meta.xml
<CustomField>
    <fullName>GenerationProfile__c</fullName>
    <formula>TEXT( SBQQ__Quote__r.Contract_Type__r.Generation_Profile__c )</formula>
    <label>Generation Profile</label>
    <type>Text</type>
</CustomField>