unpackaged/main/default/objects/Order/fields/Gross_Total_Total__c.field-meta.xml
<CustomField>
    <fullName>Gross_Total_Total__c</fullName>
    <formula>SBQQ__Quote__r.Gross_Total_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Total Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>