unpackaged/main/default/objects/Order/fields/Group_Code_for_Billing__c.field-meta.xml
<CustomField>
    <fullName>Group_Code_for_Billing__c</fullName>
    <formula>SBQQ__Quote__r.Group_Code_for_Billing__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Group Code for Billing</label>
    <type>Text</type>
</CustomField>