unpackaged/main/default/objects/Order/fields/Increase_Mode__c.field-meta.xml
<CustomField>
    <fullName>Increase_Mode__c</fullName>
    <formula>TEXT(SBQQ__Quote__r.Increase_Mode__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Increase Mode</label>
    <type>Text</type>
</CustomField>