unpackaged/main/default/objects/Order/fields/Increase_Type__c.field-meta.xml
<CustomField>
    <fullName>Increase_Type__c</fullName>
    <formula>TEXT(SBQQ__Quote__r.Increase_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Increase Type</label>
    <type>Text</type>
</CustomField>