unpackaged/main/default/objects/Order/fields/Influenced_Order__c.field-meta.xml
<CustomField>
    <fullName>Influenced_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Influenced Order</label>
    <type>Checkbox</type>
</CustomField>