unpackaged/main/default/objects/Order/fields/InfoRevision__c.field-meta.xml
<CustomField>
    <fullName>InfoRevision__c</fullName>
    <formula>SBQQ__Quote__r.InfoRevision__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>InfoRevision</label>
    <type>Checkbox</type>
</CustomField>