unpackaged/main/default/objects/Order/fields/Invoice_City__c.field-meta.xml
<CustomField>
    <fullName>Invoice_City__c</fullName>
    <label>Invoice City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>