unpackaged/main/default/objects/Order/fields/Invoice_Country__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Country__c</fullName>
    <label>Invoice Country</label>
    <length>40</length>
    <type>Text</type>
</CustomField>