unpackaged/main/default/objects/Order/fields/Jurist_Name__c.field-meta.xml
<CustomField>
    <fullName>Jurist_Name__c</fullName>
    <label>Jurist Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>