unpackaged/main/default/objects/Order/fields/Legal_Label__c.field-meta.xml
<CustomField>
    <fullName>Legal_Label__c</fullName>
    <formula>SBQQ__Quote__r.Legal_Label__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legal Label</label>
    <type>Text</type>
</CustomField>