unpackaged/main/default/objects/Order/fields/M_R_R__c.field-meta.xml
<CustomField>
    <fullName>M_R_R__c</fullName>
    <formula>SBQQ__Quote__r.M_R_R__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>M.R.R</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>