unpackaged/main/default/objects/Order/fields/Master_Account_ERP_Number__c.field-meta.xml
<CustomField>
    <fullName>Master_Account_ERP_Number__c</fullName>
    <formula>SBQQ__Quote__r.Master_Account_ERP_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Master Account ERP Number</label>
    <type>Text</type>
</CustomField>