unpackaged/main/default/objects/Order/fields/Modified_Number__c.field-meta.xml
<CustomField>
    <fullName>Modified_Number__c</fullName>
    <label>Zuora modified subscription</label>
    <length>255</length>
    <type>Text</type>
</CustomField>