unpackaged/main/default/objects/Order/fields/Months_for_Notice__c.field-meta.xml
<CustomField>
    <fullName>Months_for_Notice__c</fullName>
    <formula>SBQQ__Quote__r.Months_for_Notice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Months for Notice</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>