unpackaged/main/default/objects/Order/fields/New_Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>New_Bank_Name__c</fullName>
    <label>Bank Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>