unpackaged/main/default/objects/Order/fields/New_UMR__c.field-meta.xml
<CustomField>
    <fullName>New_UMR__c</fullName>
    <formula>SBQQ__Quote__r.New_UMR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>RUM</label>
    <type>Text</type>
</CustomField>