unpackaged/main/default/objects/Order/fields/No_PO_Exception__c.field-meta.xml
<CustomField>
    <fullName>No_PO_Exception__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No PO Exception</label>
    <type>Checkbox</type>
</CustomField>