unpackaged/main/default/objects/Order/fields/Notice_Period_Months__c.field-meta.xml
<CustomField>
    <fullName>Notice_Period_Months__c</fullName>
    <formula>SBQQ__Quote__r.Notice_Period_Months__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Default Notice Period (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>