unpackaged/main/default/objects/Order/fields/One_Time_Services_Amount__c.field-meta.xml
<CustomField>
    <fullName>One_Time_Services_Amount__c</fullName>
    <formula>SBQQ__Quote__r.One_Time_Services_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>One-Time Services Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>