unpackaged/main/default/objects/Order/fields/OPCA_is_planned_by_Customer__c.field-meta.xml
<CustomField>
    <fullName>OPCA_is_planned_by_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>OPCA is planned by Customer</label>
    <type>Checkbox</type>
</CustomField>