unpackaged/main/default/objects/Order/fields/OPCA_Total__c.field-meta.xml
<CustomField>
    <fullName>OPCA_Total__c</fullName>
    <formula>SBQQ__Quote__r.OPCA_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>OPCA Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>