unpackaged/main/default/objects/Order/fields/Opportunity_Code_Part_1__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Code_Part_1__c</fullName>
    <formula>SBQQ__Quote__r.Opportunity_Code_Part_1__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Code Part 1</label>
    <type>Text</type>
</CustomField>