unpackaged/main/default/objects/Order/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <description>Numéro du bon de commande
W-001931 modifier le libellé du champ</description>
    <label>Zuora Created subscription</label>
    <length>25</length>
    <type>Text</type>
</CustomField>