unpackaged/main/default/objects/Order/fields/Ordering_Account__c.field-meta.xml
<CustomField>
    <fullName>Ordering_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ordering Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Orders</relationshipName>
    <type>Lookup</type>
</CustomField>