unpackaged/main/default/objects/Order/fields/Ordering_Account_City__c.field-meta.xml
<CustomField>
    <fullName>Ordering_Account_City__c</fullName>
    <label>Ordering Account City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>