unpackaged/main/default/objects/Order/fields/Ordering_Account_Country__c.field-meta.xml
<CustomField>
    <fullName>Ordering_Account_Country__c</fullName>
    <label>Ordering Account Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>