unpackaged/main/default/objects/Order/fields/Ordering_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Ordering_Account_Name__c</fullName>
    <label>Ordering Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>