unpackaged/main/default/objects/Order/fields/Ordering_Account_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Ordering_Account_Postal_Code__c</fullName>
    <label>Ordering Account Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>