unpackaged/main/default/objects/Order/fields/Ordering_Account_Street__c.field-meta.xml
<CustomField>
    <fullName>Ordering_Account_Street__c</fullName>
    <label>Ordering Account Street</label>
    <length>80</length>
    <type>Text</type>
</CustomField>