unpackaged/main/default/objects/Order/fields/Original_Service_Level__c.field-meta.xml
<CustomField>
    <fullName>Original_Service_Level__c</fullName>
    <label>Original Service Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ServiceLevel</valueSetName>
    </valueSet>
</CustomField>