unpackaged/main/default/objects/Order/fields/Original_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Original_Subscription__c</fullName>
    <formula>SBQQ__Quote__r.Original_Subscription__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Original Subscription</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>