unpackaged/main/default/objects/Order/fields/Original_User_Code__c.field-meta.xml
<CustomField>
    <fullName>Original_User_Code__c</fullName>
    <formula>SBQQ__Quote__r.Original_User_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Original User Code</label>
    <type>Text</type>
</CustomField>