unpackaged/main/default/objects/Order/fields/Partner_Distributor__c.field-meta.xml
<CustomField>
    <fullName>Partner_Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Partner Distributor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders (Partner Distributor)</relationshipLabel>
    <relationshipName>Account1</relationshipName>
    <type>Lookup</type>
</CustomField>