unpackaged/main/default/objects/Order/fields/Payer_Account__c.field-meta.xml
<CustomField>
    <fullName>Payer_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payer Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders (Payer Account)</relationshipLabel>
    <relationshipName>Orders3</relationshipName>
    <type>Lookup</type>
</CustomField>