unpackaged/main/default/objects/Order/fields/Payer_City__c.field-meta.xml
<CustomField>
    <fullName>Payer_City__c</fullName>
    <label>Payer City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>