unpackaged/main/default/objects/Order/fields/Payer_Country__c.field-meta.xml
<CustomField>
    <fullName>Payer_Country__c</fullName>
    <label>Payer Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>