unpackaged/main/default/objects/Order/fields/Payer_ERP_Number__c.field-meta.xml
<CustomField>
    <fullName>Payer_ERP_Number__c</fullName>
    <formula>SBQQ__Quote__r.Payer_ERP_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payer ERP Number</label>
    <type>Text</type>
</CustomField>