unpackaged/main/default/objects/Order/fields/Payer_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Payer_Postal_Code__c</fullName>
    <label>Payer Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>