unpackaged/main/default/objects/Order/fields/Payer_Street__c.field-meta.xml
<CustomField>
    <fullName>Payer_Street__c</fullName>
    <label>Payer Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>